20-media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /tank/app/arr/sonarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /tank/media
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: DirectoryOrCreate
