20-media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: media-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sonarr.neleoz.com
      secretName: sonarr-tls
  rules:
    - host: sonarr.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
